--- a/index.html
+++ b/index.html
@@ -3,9 +3,83 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>321 Mario kart dupe</title>
+
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.2.1/css/all.css" />
+   
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <section id ="menu">
+        <div class="logo">
+            <i class="fa-solid fa-car-burst"></i>
+            <h2>Pettit kart</h2>
+        </div>
+
+        <div class = "items">
+            <li><i class="fa-solid fa-users"></i><a href="customer.html">Register</a></li>
+            <li><i class="fa-solid fa-clipboard-list"></i><a href="#">Tournament Bracket</a></li>
+            <li><i class="fa-solid fa-tv"></i><a href="#">Live Match</a></li>
+            <li><i class="fa-solid fa-square-poll-vertical"></i><a href="#">Results</a></li>
+        </div>
+    </section>
+    <section id ="register">
+
+        <div class="navigation">
+            <div class="n1">
+                <div>
+                    <i id="menuBtn" class="fas fa-bars"></i>
+                </div>
+                <div class="raceIcons">
+                    <img src="https://img.icons8.com/color/48/null/super-mario.png"/>
+                    <i class="fa-solid fa-car-side"></i>
+                    <i class="fa-solid fa-car-side"></i>
+                    <i class="fa-solid fa-car-side"></i>
+                    <div class="dots">
+                        <i class="fa-solid fa-circle"></i>
+                        <i class="fa-solid fa-circle"></i>
+                        <i class="fa-solid fa-circle"></i>
+                    </div>
+                    <div class="lastCar">
+                        <i class="fa-solid fa-car-side"></i>
+                    </div>
+                    <img src="https://img.icons8.com/color/48/null/luigi.png"/>
+                </div>
+            </div>
+        </div>
+        <h3 class="i-name">REGISTER NOW!!</h3>
+        <div class="dataTable">
+            <table id="dataGrid" width ="100%">
+                <thead>
+                    <tr>
+                        <td>Group Name</td>
+                        <td>Group Number</td>
+                        <td>Actions</td>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+        <div id="simpleModal" class ="addModal">
+            <div class="modal-content">
+                <form method="POST" class="addData">
+                    <label for="groupName">Group Name</label>
+                    <input type="text" id="groupName" required>
+                    <br><br>
+                    <label for="groupNumber">Group Number</label>
+                    <input type="number" id="groupNumber" required><br>
+
+                    <input type="button" class="save" value="Save" onclick="saveBtn();">
+                </form>
+            </div>
+        </div>
+        <div class="add">
+            <input type="button" id="modalBtn" class="button" value="Set Data">
+        </div>
+        <script src="user.js"></script>
+    </section>
 </body>
 </html>
