--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html lang="en">
 <head>
+    <h3>"Hello</h3>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -17,9 +18,9 @@
         </div>
 
         <div class = "items">
-            <li><i class="fa-solid fa-users"></i><a href="customer.html">Register</a></li>
-            <li><i class="fa-solid fa-clipboard-list"></i><a href="#">Tournament Bracket</a></li>
-            <li><i class="fa-solid fa-tv"></i><a href="#">Live Match</a></li>
+            <li><i class="fa-solid fa-users"></i><a href="">Register</a></li>
+            <li><i class="fa-solid fa-clipboard-list"></i><a href="tourBrack.html">Tournament Bracket</a></li>
+            <li><i class="fa-solid fa-tv"></i><a href="liveMatch.html">Live Match</a></li>
             <li><i class="fa-solid fa-square-poll-vertical"></i><a href="#">Results</a></li>
         </div>
     </section>
